--- a/rwd-layout4.html
+++ b/rwd-layout4.html
@@ -14,7 +14,7 @@
     <nav class="nav" id="nav">
       <a href="#">宋承諺</a>
       <a href="#">曾宇恩</a>
-      <a href="#">貓咪</a>
+      <a href="#">白睿丞</a>
       <a href="#">狗狗</a>
       <a href="#">綿羊</a>
       <a href="#">牛牛</a>
@@ -35,8 +35,8 @@
     </div>
     
     <div class="item">
-    <div>貓咪</div>
-    <img src="2.jpg" alt="產品1圖片" />
+    <div>白睿丞</div>
+    <img src="https://thomas980130.github.io/homework/IMG_8151.jpg" alt="產品1圖片" />
     </div>
 
     <div class="item">
